# ChangeLog for dev-util/oprofile
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/oprofile/ChangeLog,v 1.10 2005/01/12 00:08:59 spock Exp $

  12 Jan 2005; Michal Januszewski <spock@gentoo.org> oprofile-0.8.1.ebuild:
  Stable on x86.

*oprofile-0.8.1 (14 Sep 2004)

  14 Sep 2004; Michal Januszewski <spock@gentoo.org> +oprofile-0.8.1.ebuild:
  Version bump.

  03 Jul 2004; Michal Januszewski <spock@gentoo.org> oprofile-0.8.ebuild:
  Stable on x86.

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> oprofile-0.7.1.ebuild,
  oprofile-0.8.ebuild:
  Fix use invocation

*oprofile-0.8 (14 May 2004)

  14 May 2004; Michal Januszewski <spock@gentoo.org> +oprofile-0.8.ebuild:
  Version bump.

  13 Apr 2004; Michal Januszewski <spock@gentoo.org> oprofile-0.7.1.ebuild,
  oprofile-0.7.ebuild:
  Stable on x86.

  11 Feb 2004; Michal Januszewski <spock@gentoo.org> oprofile-0.7.1.ebuild:
  Fixed sandbox violations when emerged with qt USE flag. Closes #40953.

*oprofile-0.7.1 (01 Feb 2004)

  01 Feb 2004; Michal Januszewski <spock@gentoo.org> metadata.xml,
  oprofile-0.7.1.ebuild, oprofile-0.7.ebuild:
  Version bump, closes #39715.

*oprofile-0.7 (23 Oct 2003)

  23 Oct 2003; Stefan Jones <cretin@gentoo.org>:
  Initial import.  Ebuild submitted by Marc Bevand <bevand_m@epita.fr>.
  See bug #31101.
