@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/oprofile
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/oprofile/ChangeLog,v 1.10 2005/01/12 00:08:59 spock Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/oprofile/ChangeLog,v 1.11 2005/03/25 17:20:17 spock Exp $
+
+*oprofile-0.8.2 (25 Mar 2005)
+
+  25 Mar 2005; Michał Januszewski <spock@gentoo.org> -oprofile-0.7.ebuild,
+  -oprofile-0.7.1.ebuild, +oprofile-0.8.2.ebuild:
+  Version bump. Removed old ebuilds.
 
   12 Jan 2005; Michal Januszewski <spock@gentoo.org> oprofile-0.8.1.ebuild:
   Stable on x86.
